added content and styles

--- a/app/views/projects/_services.html.haml
+++ b/app/views/projects/_services.html.haml
@@ -8,13 +8,13 @@
     %div.row.services.scrollimation.fade-left
       %div.col-md-3.text-center
         %a.icon{ :href => "#fakelink" }
-          %i.icon-flag"
+          %i.icon-flag
         %h2 APPLICATIONS
       %div.col-md-3.details
         %p Business application development is our core competence. We will handle your entire project lifecycle: from requirements analysis to QA and server deployment to ensure projects are completed quickly.
       %div.col-md-3.text-center
         %a.icon{ :href => "#fakelink" }
-          %i.icon-code"
+          %i.icon-code
         %h2 Project Management
       %div.col-md-3.details
         %p At every stage of the development process, from conceptual design to product release, the highest quality standards are maintained.
