--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,7 +1,18 @@
 = render 'main_nav'
 
 = render 'header'
-
 = render 'services'
 
 = render 'about'
+
+= render 'skills'
+
+= render 'portfolio' 
+
+= render 'twitter'
+
+= render 'contact'
+
+= render 'footer'
+
+
