fixed image and font paths

--- a/app/views/projects/_portfolio.html.haml
+++ b/app/views/projects/_portfolio.html.haml
@@ -19,83 +19,101 @@
   %div.container.masonry-wrapper.scrollimation.fade-in
     %div#projects-container
       %a.project-item.web-design{ :href => "http://www.google.com", "data-images" => "assets/projects/project-slide.jpg, assets/projects/project-slide.jpg"}
-        %img.img-responsive.project-image{ :src => "assets/projects/project-thumb.jpg", :alt => ""}
+        = image_tag 'projects/project-thumb.jpg', class: 'img-responsive project-image'
         %div.hover-mask
           %h2.project-title Project 1
           %p google.com
         %div.sr-only.project-description
-          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-          %img.img-responsive.img-center{ :src => "assets/projects/company-logo.png", :alt => ""}
+          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
+          
+          = image_tag 'projects/company-logo.png', class: 'img-responsive img-center'
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
           %p Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.
 
       %a.project-item.icons.ui-kits{ :href => "#somelink", "data-images" => "assets/projects/project-slide.jpg, assets/projects/project-slide.jpg"}
-        %img.img-responsive.project-image{ :src => "assets/projects/project-thumb.jpg", :alt => ""}
+        = image_tag 'projects/project-thumb.jpg', class: 'img-responsive project-image'
         %div.hover-mask
           %h2.project-title Project 2
           %p microsoft.com
         %div.sr-only.project-description
           %p.clearfix Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
-          %img.img-responsive.img-center{ :src => "assets/projects/company-logo.png", :alt => ""}
+
+          = image_tag 'projects/company-logo.png', class: 'img-responsive img-center'
+          
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu. Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.
         
       %a.project-item.web-design.ui-kits{ :href => "#somelink", "data-images" => "assets/projects/project-slide.jpg, assets/projects/project-slide.jpg"}
-        %img.img-responsive.project-image{ :src => "assets/projects/project-thumb.jpg", :alt => ""}
+        = image_tag 'projects/project-thumb.jpg', class: 'img-responsive project-image'
         %div.hover-mask
           %h2.project-title Project 3
           %p amazon.com
         %div.sr-only.project-description
           %p.clearfix Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
-          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.</p>
-          %img.img-responsive.img-center{ :src => "assets/projects/company-logo.png", :alt => ""}
+          %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
+
+          = image_tag 'projects/company-logo.png', class: 'img-responsive img-center'
+
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
       
       %a.project-item.ui-kits{ :href => "http://www.google.com", "data-images" => "assets/projects/project-slide.jpg, assets/projects/project-slide.jpg"}
-        %img.img-responsive.project-image{ :src => "assets/projects/project-thumb.jpg", :alt => ""}
+        = image_tag 'projects/project-thumb.jpg', class: 'img-responsive project-image'
+
         %div.hover-mask
           %h2.project-title Project 4
           %p google.com
         %div.sr-only.project-description
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
-          %img.img-responsive.img-center{ :src => "assets/projects/company-logo.png", :alt => ""}
+
+          = image_tag 'projects/company-logo.png', class: 'img-responsive img-center'
+
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
           %p Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.
       
       %a.project-item.icons{ :href => "#somelink", "data-images" => "assets/projects/project-slide.jpg, assets/projects/project-slide.jpg"}
-        %img.img-responsive.project-image{ :src => "assets/projects/project-thumb.jpg", :alt => ""}
+        = image_tag 'projects/project-thumb.jpg', class: 'img-responsive project-image'
+
         %div.hover-mask
           %h2.project-title Project 5
           %p microsoft.com
         %div.sr-only.project-description
           %p.clearfix Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
-          %img.img-responsive.img-center{ :src => "assets/projects/company-logo.png", :alt => ""}
+
+          = image_tag 'projects/company-logo.png', class: 'img-responsive img-center'
+
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu. Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.
       
       %a.project-item.web-design{ :href => "#somelink", "data-images" => "assets/projects/project-slide.jpg, assets/projects/project-slide.jpg"}
-        %img.img-responsive.project-image{ :src => "assets/projects/project-thumb.jpg", :alt => ""} 
+        = image_tag 'projects/project-thumb.jpg', class: 'img-responsive project-image'
+
         %div.hover-mask
           %h2.project-title Project 6
           %p amazon.com
         %div.sr-only.project-description
           %p.clearfix Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
-          %img.img-responsive.img-center{ :src => "assets/projects/company-logo.png", :alt => ""}
+
+          = image_tag 'projects/company-logo.png', class: 'img-responsive img-center'
+
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
       %a.project-item.web-design{ :href => "http://www.google.com", "data-images" => "assets/projects/project-slide.jpg, assets/projects/project-slide.jpg"}
-        %img.img-responsive.project-image{ :src => "assets/projects/project-thumb.jpg", :alt => ""} 
+        = image_tag 'projects/project-thumb.jpg', class: 'img-responsive project-image'
+
         %div.hover-mask
           %h2.project-title Project 7
           %p google.com
         %div.sr-only.project-description
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
-          %img.img-responsive.img-center{ :src => "assets/projects/company-logo.png", :alt => ""}
+
+          = image_tag 'projects/company-logo.png', class: 'img-responsive img-center'
+
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
           %p Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.
        
       %a.project-item.icons{ :href => "#somelink", "data-images" => "assets/projects/project-slide.jpg, assets/projects/project-slide.jpg"}
-        %img.img-responsive.project-image{ :src => "assets/projects/project-thumb.jpg", :alt => ""} 
+        = image_tag 'projects/project-thumb.jpg', class: 'img-responsive project-image'
+
         
         %div.hover-mask
           %h2.project-title Project 8
@@ -103,12 +121,14 @@
         %div.sr-only.project-description
           %p.clearfix Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
-          %img.img-responsive.img-center{ :src => "assets/projects/company-logo.png", :alt => ""}
+
+          = image_tag 'projects/company-logo.png', class: 'img-responsive img-center'
+
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu. Nam eget urna pellentesque nisl ultrices dapibus. Mauris accumsan vehicula nisl, sed tempus mauris facilisis eu. Donec a iaculis nisi, quis malesuada justo. Pellentesque ut enim sit amet ipsum dignissim egestas. Morbi tincidunt rhoncus urna eget placerat.
 
       %a.project-item.web-design{ :href => "#somelink", "data-images" => "assets/projects/project-slide.jpg, assets/projects/project-slide.jpg, assets/projects/project-slide.jpg"}
+        = image_tag 'projects/project-thumb.jpg', class: 'img-responsive project-image'
         
-        %img.img-responsive.project-image{ :src => "assets/projects/project-thumb.jpg", :alt => ""}
         %div.hover-mask
           %h2.project-title Project 9
           %p amazon.com
@@ -116,7 +136,9 @@
         %div.sr-only.project-description
           %p.clearfix Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. Nulla suscipit erat nibh, ut porttitor nisl dapibus eu.
-          %img.img-responsive.img-center{ :src => "assets/projects/company-logo.png", :alt => ""}
+
+          = image_tag 'projects/company-logo.png', class: 'img-responsive img-center'
+
           %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sapien risus, blandit at fringilla ac, varius sed dolor. Donec augue lacus, vulputate sed consectetur facilisis, interdum pharetra ligula. 
 
   %div#project-modal.modal.fade
