--- a/app/views/projects/_contact.html.haml
+++ b/app/views/projects/_contact.html.haml
@@ -31,27 +31,11 @@
             %a{ :href => "#fakelink"}
               %i.icon-google-plus
 
-      %form#contact-form.col-sm-7.scrollimation.fade-left{ :action => "contact.php", :method => "post"}
-        %div.form-group
-          %label.control-label{ :for => "contact-name"} Name
-          %div.controls
-          %i.icon-user
-          %input#contact-name.form-control.input-lg.requiredField{ :name => "contactName", :placeholder => "My name is...",  :type => "text", "data-error-empty" => "Please enter your name"}
+      = form_tag("/contact", method: "post", id: "contact-form", class: "col-sm-7 scrollimation fade-left") do
+        = text_field_tag(:name, nil, placeholder: "Please enter your name", id: "contact-name", class: "form-control input-lg requireField")
+        = text_field_tag(:email, nil, placeholder: "Please enter your email", id: "contact-mail", class: "form-control input-lg requireField")
+        = text_area_tag(:message, nil, rows: 3, placeholder: "I wanna talk about...", id: "contact-message", class: "form-control input-lg requiredField")
+
+        = submit_tag("Search", id: "contact-btn", class: "btn btn-theme btn-lg" )
         
-        %div.form-group
-          %label.control-label{ :for => "contact-mail"} Email
-          %div.controls
-          %i.icon-envelope
-          %input#contact-mail.form-control.input-lg.requiredField{ :name => "email", :placeholder => "Please respond at...", :type => "email", "data-error-empty" => "Please enter your email", "data-error-invalid" => "Invalid email address"}
-        
-        %div.form-group
-          %label.control-label{ :for => "contact-message"} Message
-          %div.controls
-            %i.icon-comment
-            %textarea#contact-message.form-control.input-lg.requiredField{ :name => "comments", :placeholder => "I wanna talk about...", :rows => "5", "data-error-empty" => "Please enter your message"}
-        
-        %p 
-          %button.btn.btn-theme.btn-lg{ :name => "submit", :type => "submit", "data-error-message" => "Error!", "data-sending-message" => "Sending...", "data-ok-message" => "Message Sent"}
-            %i.icon-location-arrow
-            Send Message
-        %input{ :type => "hidden", :name => "submitted", :id => "submitted", :value => "true"}
+  
