letter opener gem and fixed email form button

--- a/app/views/projects/_contact.html.haml
+++ b/app/views/projects/_contact.html.haml
@@ -36,6 +36,6 @@
         = text_field_tag(:email, nil, placeholder: "Please enter your email", id: "contact-mail", class: "form-control input-lg requireField")
         = text_area_tag(:message, nil, rows: 3, placeholder: "I wanna talk about...", id: "contact-message", class: "form-control input-lg requiredField")
 
-        = submit_tag("Search", id: "contact-btn", class: "btn btn-theme btn-lg" )
+        = submit_tag("send message", id: "contact-btn", class: "btn btn-theme btn-lg" )
         
   
