navbar toggle fix

--- a/app/views/projects/_main_nav.html.haml
+++ b/app/views/projects/_main_nav.html.haml
@@ -1,7 +1,7 @@
 %div#main-nav.navbar.navbar-fixed-top{ :role => "navigation" }
   %div.container
     %div.navbar-header
-      %button{ :type => "button", :class => "navbar-toggle", "data-target" => "#site-nav"}
+      %button{ :type => "button", :class => "navbar-toggle collapsed", "data-target" => "#site-nav", "data-toggle" => "collapse"}
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
