temporarily hide portfolio

--- a/app/views/projects/_about.html.haml
+++ b/app/views/projects/_about.html.haml
@@ -13,4 +13,4 @@
           and 
           %a{ :href => "http://www.delicato.com/"} Delicato Family Vineyards
           and currently working as a developer at Sigma Group.<br/>Creating is not just a job for us, it's a passion.
-        %a{ :href => "http://www.delicato.com/", :class => "btn btn-theme transparent scrollto"} View our Works
+        / %a{ :href => "http://www.delicato.com/", :class => "btn btn-theme transparent scrollto"} View our Works
