--- a/app/views/projects/_main_nav.html.haml
+++ b/app/views/projects/_main_nav.html.haml
@@ -16,7 +16,7 @@
           %a.scrollto{ :href => "#services"} What we do
         %li
           %a.scrollto{ :href => "#about"} About
-        %li
-          %a.scrollto{ :href => "#portfolio"} Our Works
+        / %li
+        /   %a.scrollto{ :href => "#portfolio"} Our Works
         %li
           %a.scrollto{ :href => "#contact"}Contact Us
