hide portfolio link in footer

--- a/app/views/projects/_footer.html.haml
+++ b/app/views/projects/_footer.html.haml
@@ -12,8 +12,8 @@
             %a.scrollto{ :href => "#home"} Home
           %li
             %a.scrollto{ :href => "#services"} Services
-          %li
-            %a.scrollto{ :href => "#portfolio"} Portfolio
+          / %li
+          /   %a.scrollto{ :href => "#portfolio"} Portfolio
           %li
             %a.scrollto{ :href => "#contact"} Contact
         %p &copy;Copyright 2014 / All Rights Reserved
