fixed image_tag error

--- a/app/assets/javascripts/designr.js.erb
+++ b/app/assets/javascripts/designr.js.erb
@@ -215,7 +215,7 @@ $(document).ready(function() {
 	==============================================*/
 	$.backstretch("<%= asset_path('header-background.jpg') %>");
 
-	$('body').append("<%= image_tag contact-bg.jpg, class: 'preload-image', style: 'display:none;' %>");
+	$('body').append("<%= image_tag 'contact-bg.jpg', class: 'preload-image', style: 'display:none;' %>");
 	$('#about').waypoint(function(direction){
 	
 		if($('.preload-image').length){$('.preload-image').remove();}
