changed contact information

--- a/app/views/projects/_contact.html.haml
+++ b/app/views/projects/_contact.html.haml
@@ -13,9 +13,10 @@
         %address
           Sigma Group
           %br
-          Modesto, California 95356
+          1010 10th St. Suite 1013
+          Modesto, California 95354
           %br
-          (209) 222 - 8041
+          (209) 818 - 1600
         
         %ul.socials
           %li
